Lots of stuff, ycm, bindings

--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
-YouCompleteMe
-fikse farger
+x YouCompleteMe
+x fikse farger
 fikse egen prompt
 keybindings
 
 Install scriptet burde lage filer for lokale scripts, som skal ligge i .gitignore
 
-Man må installere zsh og sette det som default shell manuelt
-Man må installere vim manuelt
+x Man må installere zsh og sette det som default shell manuelt
+x Man må installere vim manuelt
