--- a/TODO
+++ b/TODO
@@ -1,9 +1,12 @@
-x YouCompleteMe
-x fikse farger
-fikse egen prompt
 keybindings
 
 Install scriptet burde lage filer for lokale scripts, som skal ligge i .gitignore
 
-x Man må installere zsh og sette det som default shell manuelt
-x Man må installere vim manuelt
+Bedre installasjonsscript, bedre mappestruktur, feks kjør alle install* scripts i undermapper, krever litt omstokking
+
+Todo binding
+
+Lage dot update som tar git pull og installerer nye ting(vim)
+Lag lokal mappe for repos for å slippe å legge de i ~/, legg i .gitignore
+
+Bestemme om jeg skal bruke source eller . , bestemme hva som skal ha .sh, om noen
