Add support for local scripts

--- a/install
+++ b/install
@@ -40,6 +40,8 @@ clone() {
 echo "export DOTFILES=$PWD" > $PWD/.var
 export DOTFILES=$PWD
 
+mkdir $PWD/local
+
 # Install required packages
 . $DOTFILES/setup_scripts/req_packages
 
